# blackwell-kernel-sm_120

./: AGENTS.md  CMakeLists.txt  PRD.md  TASK.md  implementation.md  run_sub_mini.sh
artifacts/benchmarks/: README.md
artifacts/m1/tests/: README.md
artifacts/m2/: README.md
artifacts/m2/benchmarks/: README.md
artifacts/path_b/logs/: path_b_status.md
artifacts/sm120f/: README.md
artifacts/sm120f/logs/: p4b_commands.md  p4b_remote_benchmark.sh
artifacts/sm120f/p0-a/: pin.json
artifacts/sm120f/p2/: test_vllm_dispatch.py  verification.txt
artifacts/sm120f/p3/: verification.txt
artifacts/sm120f/p4/: matrix_status.md  throughput.txt  verification.txt
artifacts/sm120f/p4-b/: run_batch4_benchmark.py  summary.md
artifacts/sm120f/patches/: p1.patch  p2.patch
artifacts/tests/: README.md
benchmarks/: CMakeLists.txt  README.md  benchmark_main.cpp  run_benchmarks.sh  run_m2_benchmark.sh
cmake/: SM120Dependencies.cmake  SM120Options.cmake  sm120-toolchain.cmake
docs/: environment.md  m1-c.md  m4-c.md  p0-c-ops.md  vllm_registration.md
include/sm120/: config.h.in
include/sm120/intrinsics/: fp4_intrinsics.h
include/sm120/runtime/: host_launcher.h  parameter_validation.h
scripts/: benchmark_phase1.sh  benchmark_phase2.sh  benchmark_phase3.sh  benchmark_production.sh  profile_nsys.sh  run_correctness_gate.sh  run_m1c.sh  run_m4_gate.sh  serve_phase1_cuda_graphs.sh  serve_phase2_batching.sh  serve_phase3_context.sh  serve_qwen35_gdn.sh  serve_qwen35_hf_baseline.sh  serve_qwen35_hf_sm120.sh  smoke_qwen35_gdn.sh  watch_nvfp4_checkpoint.sh
src/: CMakeLists.txt
src/intrinsics/: CMakeLists.txt  gdn_fp4_intrinsics.cuh
src/kernel/: CMakeLists.txt  gdn_kernel.cu  gdn_kernel.hpp  gdn_state_update.cu  gdn_state_update_ref.cu  gdn_tiled_kernel.cu  tcgen05_probe.cu
src/ops/: CMakeLists.txt  gdn_op.cu  gdn_op.py  qwen35_gdn_patch.py  vllm_sm120_plugin.py
src/pytorch/: CMakeLists.txt
src/runtime/: CMakeLists.txt  host_launcher.cpp  parameter_validation.cpp
src/trtllm/: CMakeLists.txt
test/: test_vllm_detection.py  test_vllm_integration.py
tests/: CMakeLists.txt  README.md  run_tests.sh  test_gdn_correctness.cu  test_vllm_integration.py
tests/integration/: CMakeLists.txt  main.cpp
tests/unit/: CMakeLists.txt  m1_intrinsics.hpp  main.cpp
tools/: run_recurrent_vv_matrix.py
vllm/model_executor/layers/gdn/: gdn_mixed_precision.py  gdn_state_update.cu  gdn_state_update.cuh  validate_gdn_sqnr.py
vllm/model_executor/models/: qwen3_next.py
